--- a/android/build.gradle
+++ b/android/build.gradle
@@ -45,6 +45,7 @@ android {
 
     defaultConfig {
         minSdk = 27
+        consumerProguardFiles("proguard-rules.pro")
     }
 
     packagingOptions {
@@ -54,7 +55,7 @@ android {
     }
 
     dependencies {
-        implementation("ai.nexa:core:0.0.10")
+        implementation("ai.nexa:core:0.0.11")
         implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3")
         implementation("com.google.code.gson:gson:2.10.1")
         implementation("com.squareup.okhttp3:okhttp:4.12.0")
