Update launch configurations and bump package versions in pubspec.lock

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
             "cwd": "example",
             "request": "launch",
             "type": "dart"
+        },
+         {
+            "name": "release",
+            "cwd": "example",
+            "request": "launch",
+            "type": "dart",
+            "args": ["--release"]
         }
     ]
 }
